# AutoTimm

./: .gitignore  README.md  TORCHSCRIPT_EXPORT.md  mkdocs.yml  pyproject.toml  test_list_optimizers.py  test_loss_features.py  zensical.toml
.github/workflows/: ci.yml  docs-tags.yml  docs.yml  publish.yaml
docs/: index.md  robots.txt
docs/api/: backbone.md  classifier.md  cli.md  csv_data.md  data.md  detection.md  detection_data.md  export.md  heads.md  index.md  loggers.md  loss-registry.md  losses.md  metrics.md  multilabel_data.md  segmentation.md  trainer.md  transforms.md  utils.md
docs/examples/: backbone-utilities.md  classification.md  huggingface-hub.md  index.md  logging-metrics.md  semantic-segmentation.md
docs/examples/integration/: hf_deployment.md  hf_ensemble.md  hf_interpretation.md  hf_transfer_learning.md  huggingface-hub.md
docs/examples/tasks/: classification.md  instance-segmentation.md  object-detection.md  semantic-segmentation.md
docs/examples/utilities/: backbone-utilities.md  cli.md  csv-data-loading.md  data-handling.md  hf_custom_data.md  hf_hyperparameter_tuning.md  interpretation.md  logging-metrics.md  training-utilities.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mermaid-zoom.js
docs/overrides/: main.html
docs/stylesheets/: extra.css  mermaid-zoom.css  mermaid.css
docs/troubleshooting/: index.md
docs/troubleshooting/data/: augmentation.md  data-loading.md
docs/troubleshooting/deployment/: export-inference.md  production.md
docs/troubleshooting/environment/: device-errors.md  distributed.md  installation.md
docs/troubleshooting/integration/: huggingface.md  loggers.md  reproducibility.md
docs/troubleshooting/models/: metrics.md  model-loading.md
docs/troubleshooting/performance/: oom-errors.md  profiling.md  slow-training.md
docs/troubleshooting/reference/: error-reference.md  warnings.md
docs/troubleshooting/task-specific/: interpretation.md  yolox.md
docs/troubleshooting/training/: convergence.md  gradient-issues.md  lr-tuning.md  nan-losses.md
docs/user-guide/: data-loading.md  dataset-preparation.md  deployment.md  huggingface-hub-integration.md  huggingface-integration-comparison.md  huggingface-transformers-integration.md  index.md  inference.md  logging.md  metric-selection.md  migration.md  models.md  training.md  troubleshooting.md
docs/user-guide/data-loading/: csv-data.md  image-classification-data.md  index.md  object-detection-data.md  (+4 more)
examples/: albumentations_cifar10.py  albumentations_custom_folder.py  auto_tuning.py  backbone_discovery.py  balanced_sampling.py  classify_cifar10.py  classify_custom_folder.py  comprehensive_interpretation_tutorial.ipynb  detailed_evaluation.py  detection_inference.py  explore_yolox_models.py  hf_direct_models_lightning.py  hf_hub_advanced.py  hf_hub_lightning_integration.py  hf_hub_segmentation.py  huggingface_hub_models.py  inference.py  inference_without_metrics.py  instance_segmentation.py  interactive_visualization_demo.py  interpretation_demo.py  interpretation_metrics_demo.py  interpretation_phase2_demo.py  interpretation_phase3_demo.py  mlflow_tracking.py  multi_gpu_training.py  multiple_loggers.py  object_detection_coco.py  object_detection_rtdetr.py  object_detection_transformers.py  object_detection_yolox.py  performance_optimization_demo.py  segmentation_inference.py  semantic_segmentation.py  timm_metrics.py  vit_finetuning.py  yolox_official.py
examples/cli/: README.md  classification.yaml  classification_csv.yaml  detection.yaml  segmentation.yaml
examples/computer_vision/: README.md  explore_yolox_models.py  object_detection_rtdetr.py  object_detection_transformers.py  semantic_segmentation.py  yolox_official.py
examples/data_training/: README.md  albumentations_cifar10.py  balanced_sampling.py  csv_classification.py  csv_detection.py  csv_instance_segmentation.py  csv_segmentation.py  hf_custom_data.py  hf_hyperparameter_tuning.py  multilabel_classification.py  performance_optimization_demo.py  preset_manager.py
examples/deployment/: README.md  deploy_torchscript_cpp.py  export_to_onnx.py  export_to_torchscript.py
examples/getting_started/: README.md  classify_custom_folder.py  vit_finetuning.py
examples/huggingface/: README.md  hf_deployment.py  hf_ensemble.py  hf_hub_advanced.py  hf_hub_classification.py  hf_hub_instance_segmentation.py  hf_hub_lightning_integration.py  hf_hub_object_detection.py  hf_hub_segmentation.py  hf_interpretation.py  hf_transfer_learning.py  huggingface_hub_models.py
examples/interpretation/: README.md  comprehensive_interpretation_tutorial.ipynb  interactive_visualization_demo.py  interpretation_demo.py  interpretation_metrics_demo.py  interpretation_phase2_demo.py  interpretation_phase3_demo.py
examples/logging_inference/: README.md  backbone_discovery.py  detailed_evaluation.py  detection_inference.py  inference.py  inference_without_metrics.py  multilabel_inference.py  segmentation_inference.py
examples/utilities/: custom_loss_functions.py  loss_functions_demo.py  reproducibility.py  test_seeding.py  test_trainer_seeding.py
scripts/: README.md  build_docs.sh  enhance_sitemap.py
src/autotimm/: __init__.py  __main__.py  backbone.py  cli.py  export.py  export_jit.py  export_onnx.py  heads.py  interpret_cli.py  loggers.py  logging.py  metrics.py  trainer.py  utils.py
tests/: conftest.py  test_backbone.py  test_classification.py  test_csv_datamodules.py  test_datamodule.py  test_export.py  test_hf_autotrainer_compatibility.py  test_hf_direct_models.py  test_hf_hub_backbones.py  test_hf_hub_lightning_compatibility.py  test_import_aliases.py  test_interpretation.py  test_interpretation_metrics.py  test_loggers.py  test_loss_registry.py  test_metrics.py  test_multilabel_datamodule.py  test_preset_manager.py  test_reproducibility.py  test_segmentation_heads.py  test_segmentation_losses.py  test_semantic_segmentation.py  test_torch_compile.py  test_trainer.py  test_transform_config.py  test_yolox.py  test_yolox_detector.py  test_yolox_scheduler.py  test_yolox_utils.py
(+110 files in other folders)
