[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autotimm"
description = "Automated deep learning image tasks powered by timm and PyTorch Lightning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["deep-learning", "computer-vision", "pytorch", "timm", "automation"]
dynamic = ["version"]
authors = [
    {name = "Krishnatheja Vanka"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "numpy>=1.23",
]

[project.optional-dependencies]
tensorboard = ["tensorboard>=2.14"]
mlflow = ["mlflow>=2.0"]
wandb = ["wandb>=0.15"]
albumentations = ["albumentations>=1.3", "opencv-python-headless>=4.8"]
all = ["tensorboard>=2.14", "mlflow>=2.0", "wandb>=0.15", "albumentations>=1.3", "opencv-python-headless>=4.8"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "black",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/theja-vanka/AutoTimm"
Repository = "https://github.com/theja-vanka/AutoTimm"
Issues = "https://github.com/theja-vanka/AutoTimm/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>.*)$"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
