[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autotimm"
description = "Automatic Pytorch Image Models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["deep-learning", "computer-vision", "pytorch", "timm", "automation", "huggingface_hub", "torchvision", "torchmetrics"]
dynamic = ["version"]
authors = [
    {name = "Krishnatheja Vanka"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "numpy>=1.23",
    "opencv-python-headless>=4.8",
    "huggingface_hub>=0.20",
    "watermark>=2.3",
    "rich>=13.0",
    "albumentations>=1.3",
    "pycocotools>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
tensorboard = ["tensorboard>=2.14"]
mlflow = ["mlflow>=2.0"]
wandb = ["wandb>=0.15"]
interactive = ["plotly>=5.0"]
all = ["tensorboard>=2.14", "mlflow>=2.0", "wandb>=0.15", "albumentations>=1.3", "opencv-python-headless>=4.8", "pycocotools>=2.0", "plotly>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "black",
    "pycocotools>=2.0",
    "tensorboard>=2.14", 
    "mlflow>=2.0", 
    "wandb>=0.15", 
    "albumentations>=1.3", 
    "opencv-python-headless>=4.8", 
    "plotly>=5.0"
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/theja-vanka/AutoTimm"
Repository = "https://github.com/theja-vanka/AutoTimm"
Issues = "https://github.com/theja-vanka/AutoTimm/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
