[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autotimm"
description = "Automated deep learning for computer vision — train image classification, object detection, and segmentation models with 1000+ backbones in minimal code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "deep-learning",
    "computer-vision",
    "pytorch",
    "timm",
    "image-classification",
    "object-detection",
    "semantic-segmentation",
    "instance-segmentation",
    "transfer-learning",
    "vision-transformer",
    "resnet",
    "efficientnet",
    "yolox",
    "pytorch-lightning",
    "automl",
    "huggingface",
    "torchmetrics",
    "model-training",
    "model-deployment",
    "onnx-export",
]
dynamic = ["version"]
authors = [
    {name = "Krishnatheja Vanka"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "numpy>=1.23",
    "opencv-python-headless>=4.8",
    "huggingface_hub>=0.20",
    "watermark>=2.3",
    "loguru>=0.7",
    "albumentations>=1.3",
    "pycocotools>=2.0; sys_platform != 'win32'",
    "pycocotools-windows>=2.0; sys_platform == 'win32'",
    "matplotlib>=3.7",
    "transformers>=4.30",
    "jsonargparse[signatures]>=4.27",
    "plotly>=5.0",
]

[project.scripts]
autotimm = "autotimm.cli:main"
autotimm-flow = "autotimm.flow.cli:main"

[project.optional-dependencies]
tensorboard = ["tensorboard>=2.14"]
mlflow = ["mlflow>=2.0"]
wandb = ["wandb>=0.15"]
onnx = ["onnx>=1.14", "onnxruntime>=1.16", "onnxscript>=0.6"]
all = ["tensorboard>=2.14", "mlflow>=2.0", "wandb>=0.15", "albumentations>=1.3", "opencv-python-headless>=4.8", "pycocotools>=2.0; sys_platform != 'win32'", "pycocotools-windows>=2.0; sys_platform == 'win32'", "onnx>=1.14", "onnxruntime>=1.16", "onnxscript>=0.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "black",
    "pycocotools>=2.0; sys_platform != 'win32'",
    "pycocotools-windows>=2.0; sys_platform == 'win32'",
    "tensorboard>=2.14",
    "mlflow>=2.0", 
    "wandb>=0.15", 
    "albumentations>=1.3", 
    "opencv-python-headless>=4.8", 
    "plotly>=5.0",
    "transformers>=4.30",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.6",
]
docs = [
    "zensical",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://theja-vanka.github.io/AutoTimm"
Documentation = "https://theja-vanka.github.io/AutoTimm"
Repository = "https://github.com/theja-vanka/AutoTimm"
Issues = "https://github.com/theja-vanka/AutoTimm/issues"
Changelog = "https://github.com/theja-vanka/AutoTimm/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
